--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
