--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.5.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-intl": "^4.3.9",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.7.3",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8"
   },
